--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -369,7 +369,6 @@ button,
     }
 
 
-
 #banner {
 	background-color: #B33C3F;
 	color: #f2a3a5;
@@ -382,6 +381,15 @@ button,
 	text-align: left;
 	position: relative;
 	z-index: 9999;
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 2s; /* Firefox < 16 */
+  -ms-animation: fadein 2s; /* Internet Explorer */
+  -o-animation: fadein 2s; /* Opera < 12.1 */
+  animation: fadein 2s;
+}
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
 
 #banner a {
