--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -51,6 +51,9 @@ a {
   transition: color 0.2s ease-in-out;
   text-decoration: none;
 }
+.producto:hover{
+  opacity:0.5;
+}
 a:hover {
   text-decoration: underline;
 }
@@ -610,6 +613,12 @@ button.special:active,
   z-index: 10000;
   line-height: 1.5;
 }
+ li.page-item{
+  display: inline-block;
+}
+.pagination{
+  text-align:center;
+}
 #banner h1 {
   font-size: 2em;
   margin: 0 0 1em 0;
@@ -938,6 +947,9 @@ hr.major {
 .contenedor{
   width: 33%;
   float: left;
+}
+.cotenedor :hover{
+  opacity: 0.5;
 }
 /* MEDIA QUERIES */
 @-ms-viewport
